Fix IE bug with footer overflow 100% width outside of window

--- a/app/public_html/style.css
+++ b/app/public_html/style.css
@@ -52,6 +52,7 @@ button.flat_button, input.flat_button, submit.flat_button {
 }
 footer {
 	background-color:#61aea8;
+	overflow:hidden;
 }
 
 .full {
